--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ USDT_CONTRACT_ADDRESS = "";
 UNISWAP_CONTRACT_ADDRESS = "";
 USDT_HOLDER_ADDRESS = "";
 UNISWAP_ROUTER_ADDRESS = "";
+WETH_CONTRACT_ADDRESS= "";
